--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,31 +1,52 @@
 <ul>
   <li *ngFor="let t of tweets">
     <div class="tweet container" [id]="tweets.indexOf(t)">
-      <div class="row userinfo">
-        <img [src]="t.posterimg" alt="user" class="userimg" *ngIf="t.posterimg !='';else placeholderuser">
-        <p class="username">{{t.postername}}</p>
-        <p class="mention">{{t.mention}}</p>
-        <p class="timeposted">{{timedif(t)}}</p>
+       <div class="row">
+        <!-- <img [src]="t.posterimg" alt="user" class="userimg" *ngIf="t.posterimg !='';else placeholderuser"> -->
+        <div *ngIf="t.posterimg !='';else placeholderuser;" class="userimg col-1" [ngStyle]="{'background-image':'url('+t.posterimg+')'}"></div>
+        <div class="col-10 container">
+          <div class="user">
+            <span class="username">{{t.postername}}</span>
+            <span class="mention">{{t.mention}}</span>
+            <span class="timeposted">{{timedif(t)}}</span>
+          </div>
+          <div class="row content">
+            <p class="caption">{{t.caption}}</p>
+            <div class="imgcontainer" *ngIf="t.images.length !=0" [ngClass]="{'singleimg':t.images.length==1,'doubleimg':t.images.length==2,'trippleimg':t.images.length==3,'quadimg':t.images.length==4}">
+              <!-- <img *ngIf="t.images.length > 0" [src]="t.images[0]" alt="img" class="img0"> -->
+              <div id="divider1" class="divider">
+                <div class="img" id="img0" *ngIf="t.images.length > 0 "[ngStyle]="{'background-image':'url('+t.images[0]+')'}"></div>
+                <div class="img" id="img2" *ngIf="t.images.length > 2 "[ngStyle]="{'background-image':'url('+t.images[2]+')'}"></div>
+              </div>
+              <div id="divider2" class="divider">
+                <div class="img" id="img1" *ngIf="t.images.length > 1 "[ngStyle]="{'background-image':'url('+t.images[1]+')'}"></div>
+                <div class="img" id="img3" *ngIf="t.images.length > 3 "[ngStyle]="{'background-image':'url('+t.images[3]+')'}"></div>
+              </div>
+              <!-- idea make every image here a component -->
+              <!-- other idea, make this even more complicated -->
+            </div>
+          </div>
+              <div class="row likenshare">
+            <div class="col">
+              <button class="comment"></button>
+            </div><!--TODO make this into a component later -->
+            <div class="col">
+              <rt [retweets]="t.retweets"></rt>
+            </div>
+            <div class="col">
+              <like-butt [totallikes]="t.likes" [isLiked]="t.isliked"></like-butt>
+            </div>
+            <button class="share"></button><!--TODO also make this a component later-->
+          </div>
+
+        </div >
       </div>
-      <div class="row content">
-        <h1 class="caption">{{t.caption}}</h1>
-        <div class="imgcontainer" *ngIf="t.images !=[]" [ngClass]="{singleimg:t.images.length==1,doubleimg:t.images.length==2,trippleimg:t.images.length==3,quadimg:t.images.length==4}">
-          <img *ngIf="t.images.length > 0" [src]="t.images[0]" alt="img" class="img0">
-          <img *ngIf="t.images.length > 1" [src]="t.images[1]" alt="img" class="img1">
-          <img *ngIf="t.images.length > 2" [src]="t.images[2]" alt="img" class="img2">
-          <img *ngIf="t.images.length > 3" [src]="t.images[3]" alt="img" class="img3" >
-        </div>
-      </div>
-      <div class="row likenshare">
-        <button class="comment"></button><!--TODO make this into a component later -->
-        <rt [retweets]="t.retweets"></rt>
-        <like-butt [totallikes]="t.likes" [isLiked]="t.isliked"></like-butt>
-        <button class="share"></button><!--TODO also make this a component later-->
-      </div>
+
+
     </div>
   </li>
 </ul>
 
 <ng-template #placeholderuser>
-  <img src="https://www.pngitem.com/pimgs/m/30-307416_profile-icon-png-image-free-download-searchpng-employee.png" alt="user" class="userimg">
+  <div class="userimg placeholderimg" ></div>
 </ng-template>
